Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_sketchsyncback.yml
+++ b/.github/workflows/master_sketchsyncback.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy JAR app to Azure Web App - SketchsyncBack
+name: Build and deploy JAR app to Azure Web App - sketchsyncBack
 
 on:
   push:
@@ -47,7 +47,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'SketchsyncBack'
+          app-name: 'sketchsyncBack'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5C6F1F9104B04B828756CA7153523F11 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_AE05533AF67A4983A4C5A4911E14FCA7 }}
           package: '*.jar'
